# ai-content-agents

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  test_suite.py
docs/: content-ingestion-lane.md  mentor-concept-lane.md  question-bank-test-help-lane.md  retrieval-lane.md  study-agent lane.md  validation-lane.md
frontend/: qbank_ui.py
src/: __init__.py  app.py
src/agents/: concept_agent.py  mentor_agent.py  question_bank_agent.py  registry.py  test_help_agent.py
src/generation/: __init__.py  base_generator.py  mock_generator.py
src/ingestion/: README.md  chunker.py  cleaner.py  dedupe.py  loader.py  parser.py  schema.py  store.py  ui.py
src/prompts/: concept.yaml  flashcards_prompt.yaml  mentor.yaml  question_bank.yaml  revision_prompt.yaml  study_plan_prompt.yaml  test_help.yaml
src/registry/: __init__.py  agent_registry.py
src/retrieval/: __init__.py  config.py  grounding.py  index.py  models.py  retriever.py
src/schemas/: __init__.py  flashcards.py  revision.py  study_plan.py
src/services/: formatters.py
tests/: conftest.py  test_agents_integration.py  test_api.py  test_concept_agent.py  test_formatters.py  test_invalid_json.py  test_invalid_yaml.py  test_mentor_agent.py  test_missing_env.py  test_missing_yaml.py  test_prompt_loading.py  test_qbank_ui.py  test_question_bank.py  test_question_bank_live.py  test_registry.py  test_registry_and_generation.py  test_retrieval.py  test_retrieval_pipeline.py  test_schema_separation.py  test_schema_validation.py  test_test_help.py  test_test_help_live.py  test_validation.py
(+15 files in other folders)
